wrote basic styles

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
 
 
-      <title>css</title>
+      <title>Lesson-5</title>
   </head>
   <body>
 
 <h1>Hello World</h1>
+<h2>title 2</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius esse veniam laboriosam temporibus repellat ducimus dolor fugiat itaque assumenda? Iusto, officia inventore excepturi impedit quasi ea at voluptatibus voluptas saepe.</p>
+
 
 
 
